Changed viewport on Html head to see if it fixes the horizontal scroll on mobile

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -208,7 +208,6 @@
 
 @media (max-width: 700px) {
   .container{
-    overflow-x: hidden;
   }
 
   .main{
